# AIAgentDev

./: .gitignore  README.md  alembic.ini  docker-compose.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: a2e302ccf199_initial_schema.py  e382e4ca5166_create_li_document_table.py
gpt_assistant/: app.py  pyproject.toml
rag/: .env
rag/agentic_rag/: agent.py  db.py  main.py  model_document.py  pyproject.toml  services.py
rag/agentic_rag/rails/: config.yaml  prompts.yml
rag/app/: main.py
rag/autogen/: autogen_resolution_agent.py
rag/behavior_tree/: agent_state_rag.py  behavior_tree_nodes.py  construct_run_behavior_tree.py
rag/crewai/: crewai_research_agent.py
rag/db/: db.py
rag/ingest/: ingest.py
rag/models/: __init__.py  document.py
rag/operations/: crud.py  vector_search.py
rag/semantic_kernel/: basic_movie_recommender.py  memory_based_movie_recommerder.py  service_based_movie_recommender.py
rag/semantic_kernel/services/: tmdb_services.py
