[project]
name = "ai-agents"
version = "0.1.0"
description = ""
authors = [
    {name = "Zahir Shaikh",email = "zs4.machine.deep.learning@gmail.com"}
]

requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "alembic (>=1.16.1,<2.0.0)",
    "openai (>=1.3,<2.0)",
    "pypdf (>=5.6.0,<6.0.0)",
    "pgvector (>=0.4.1,<0.5.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "uvicorn (>=0.34.3,<0.35.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "dotenv (>=0.9.9,<0.10.0)",
    "ag2 (>=0.2.18,<0.3.0)",
    "requests (>=2.32.4,<3.0.0)",
    "crewai (==0.11.2)",
    "agentops (>=0.4.16,<0.5.0)",
    "setuptools (>=80.9.0,<81.0.0)",
    "semantic-kernel (>=1.34.0,<2.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
