[project]
name = "gpt-assistants"
version = "0.1.0"
description = "gpt assistant for demo"
authors = [
    {name = "ZahirShaikh"}
]
readme = "README.md"
requires-python = "3.12.9"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.2,<0.35.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
